<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:background="@color/white"
    android:layout_gravity="center"
    android:showDividers="middle"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/second_grey"
        android:showDividers="middle"
        android:paddingTop="10dp"
        android:id="@+id/summary_titles"
        android:weightSum="3">

            <TextView
                android:id="@+id/tot_ref"
                style="@style/askTheClientIfTh"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/total_referrals"
                android:textColor="@color/primary_color"
                android:fontFamily="@font/google_sans_bold"
                android:textSize="13sp"
                android:layout_weight="1"
                android:layout_column="1" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/ref_closure"
            style="@style/askTheClientIfTh"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/primary_color"
            android:text="@string/referrals_closed"
            android:fontFamily="@font/google_sans_bold"
            android:textSize="13sp"
            android:layout_column="2"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/num_visits"
            style="@style/askTheClientIfTh"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/primary_color"
            android:text="@string/total_visits"
            android:fontFamily="@font/google_sans_bold"
            android:textSize="13sp"
            android:layout_column="3" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/tot_ref_num"
            style="@style/askTheClientIfTh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/google_sans_bold"
            android:text="10"
            android:textColor="@color/primary_color"
            android:layout_weight="1"
            android:layout_column="1" />

        <TextView
            android:id="@+id/ref_closure_num"
            style="@style/askTheClientIfTh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/primary_color"
            android:fontFamily="@font/google_sans_bold"
            android:text="6"
            android:layout_column="2"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/num_visits_nums"
            style="@style/askTheClientIfTh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/primary_color"
            android:fontFamily="@font/google_sans_bold"
            android:text="34"
            android:layout_column="3"
            android:layout_weight="1" />

    </TableRow>

</TableLayout>